--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -936,17 +936,6 @@
       <td>Guangdong</td>
     </tr>
     <tr>
-      <td>CEO Foundation</td>
-      <td>主流梦工场基金</td>
-      <td>Henan Department of Education</td>
-      <td>河南省教育厅</td>
-      <td>Hong Kong</td>
-      <td>Education, Health, Poverty Alleviation, Youth</td>
-      <td>Henan</td>
-      <td>2018-09-04</td>
-      <td>Henan</td>
-    </tr>
-    <tr>
       <td>Chamber of Commerce and Industry of Romania</td>
       <td>罗马尼亚工商联合会</td>
       <td>Jiangsu Department of Commerce</td>
@@ -1168,7 +1157,7 @@
     </tr>
     <tr>
       <td>China-Britain Business Council (Beijing)</td>
-      <td>英中贸易协会</td>
+      <td>英国英中贸易协会</td>
       <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
       <td>北京市商务委员会</td>
       <td>United Kingdom</td>
@@ -1176,28 +1165,6 @@
       <td>Beijing</td>
       <td>2018-03-15</td>
       <td>Beijing</td>
-    </tr>
-    <tr>
-      <td>China-Britain Business Council (Hunan)</td>
-      <td>英中贸易协会</td>
-      <td>Hunan Department of Commerce</td>
-      <td>湖南省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Hunan</td>
-      <td>2017-04-27</td>
-      <td>Hunan</td>
-    </tr>
-    <tr>
-      <td>China-Britain Business Council (Jiangsu)</td>
-      <td>英中贸易协会</td>
-      <td>Jiangsu Department of Commerce</td>
-      <td>江苏省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Jiangsu</td>
-      <td>2017-04-10</td>
-      <td>Jiangsu</td>
     </tr>
     <tr>
       <td>China-Britain Business Council (Shanghai)</td>
@@ -1220,28 +1187,6 @@
       <td>Guangdong</td>
       <td>2019-02-11</td>
       <td>Guangdong</td>
-    </tr>
-    <tr>
-      <td>China-Britain Business Council (Sichuan)</td>
-      <td>英国英中贸易协会</td>
-      <td>Sichuan Department of Commerce</td>
-      <td>四川省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Sichuan</td>
-      <td>2017-12-20</td>
-      <td>Chongqing, Guizhou, Sichuan, Yunnan</td>
-    </tr>
-    <tr>
-      <td>China-Britain Business Council (Zhejiang)</td>
-      <td>英中贸易协会</td>
-      <td>Zhejiang Department of Commerce</td>
-      <td>浙江省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Zhejiang</td>
-      <td>2017-08-29</td>
-      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>China-Taiwan Business and Trade Exchange Association</td>
@@ -1893,6 +1838,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>European Society for Blood and Marrow Transplantation (EBMT)</td>
+      <td>欧洲血液和骨髓移植协会基金会</td>
+      <td>Shanghai Commission of Science and Technology</td>
+      <td>上海市科学技术委员会</td>
+      <td>The Netherlands</td>
+      <td>Health, International Relations/Exchange, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2022-06-02</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Fédération Française de Football</td>
       <td>法国足球协会</td>
       <td>Beijing Bureau of Sport</td>
@@ -2011,17 +1967,6 @@
       <td>Civil Society Capacity-Building, Economic Development, Education, Health, Poverty Alleviation</td>
       <td>Beijing</td>
       <td>2017-06-30</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>France Export Céréales</td>
-      <td>法国粮食出口协会</td>
-      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
-      <td>国家粮食局</td>
-      <td>France</td>
-      <td>Trade/Industry Association</td>
-      <td>Beijing</td>
-      <td>2017-09-22</td>
       <td>China</td>
     </tr>
     <tr>
@@ -2300,6 +2245,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Global Alliance of SMEs (North American Office)</td>
+      <td>美国全球中小企业联盟</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>United States</td>
+      <td>Economic Development, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2020-11-23</td>
+      <td>Zhejiang</td>
+    </tr>
+    <tr>
       <td>Global Chinese General Chamber of Commerce</td>
       <td>全球华人联合总商会</td>
       <td>Guangdong Department of Commerce</td>
@@ -2507,17 +2463,6 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>Anhui, Fujian, Gansu, Jiangsu, Jiangxi, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Xinjiang, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Habitat for Humanity Hong Kong (Sichuan)</td>
-      <td>香港仁人家园有限公司</td>
-      <td>Sichuan Department of Poverty Alleviation and Immigration</td>
-      <td>四川省扶贫和移民工作局</td>
-      <td>Hong Kong</td>
-      <td>Disaster Relief, Infrastructure, Poverty Alleviation</td>
-      <td>Sichuan</td>
-      <td>2017-06-21</td>
-      <td>Sichuan</td>
     </tr>
     <tr>
       <td>Half the Sky Foundation</td>
@@ -3301,6 +3246,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>International Psychoanalytical Association (IPA)</td>
+      <td>国际精神分析协会</td>
+      <td>Hubei Health Commission (formerly Hubei Health and Family Planning Commission)</td>
+      <td>湖北省卫生健康委员会</td>
+      <td>United Kingdom</td>
+      <td>Health</td>
+      <td>Hubei</td>
+      <td>2020-11-26</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>International Secretariat G-Global</td>
       <td>G-Global 国际秘书处协会</td>
       <td>Hainan Department of Commerce</td>
@@ -4060,17 +4016,6 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Leprosy Project</td>
-      <td>清风福康计划有限公司</td>
-      <td>Sichuan Health Commission (formerly Sichuan Health and Family Planning Commission)</td>
-      <td>四川省卫生和计划生育委员会</td>
-      <td>Hong Kong</td>
-      <td>Health, Infrastructure, Youth</td>
-      <td>Sichuan</td>
-      <td>2017-05-27</td>
-      <td>Sichuan</td>
-    </tr>
-    <tr>
       <td>Lingnan (University) College Educational Development and Research Foundation Limited</td>
       <td>岭南（大学）学院教研发展基金有限公司</td>
       <td>Guangdong Department of Education</td>
@@ -4212,17 +4157,6 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>Anhui, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Mercy Corps</td>
-      <td>国际美慈组织</td>
-      <td>State Council Leading Group Office of Poverty Alleviation and Development General Affairs Department</td>
-      <td>国务院扶贫开发领导小组办公室</td>
-      <td>United States</td>
-      <td>Civil Society Capacity-Building, Disaster Relief, International Relations/Exchange, Poverty Alleviation</td>
-      <td>Beijing</td>
-      <td>2018-02-09</td>
-      <td>China</td>
     </tr>
     <tr>
       <td>Methanol Institute</td>
@@ -5688,17 +5622,6 @@
       <td>Fujian</td>
     </tr>
     <tr>
-      <td>Taiwan Cross Strait Exhibition Association</td>
-      <td>台湾台中市两岸情经贸交流协会</td>
-      <td>Fujian Department of Commerce</td>
-      <td>福建省商务厅</td>
-      <td>Taiwan</td>
-      <td>Agriculture, Arts and Culture, Economic Development, International Relations/Exchange, Tourism, Trade/Industry Association</td>
-      <td>Fujian</td>
-      <td>2019-05-07</td>
-      <td>China</td>
-    </tr>
-    <tr>
       <td>Taiwan Electrical and Electronic Manufacturers’ Association</td>
       <td>台湾区电机电子工业同业公会</td>
       <td>Jiangsu Department of Commerce</td>
@@ -5938,17 +5861,6 @@
       <td>Education, International Relations/Exchange</td>
       <td>Guangdong</td>
       <td>2017-09-15</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>Tokai Japan-China Trade Center</td>
-      <td>一般社团法人东海日中贸易中心</td>
-      <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
-      <td>北京市商务委员会</td>
-      <td>Japan</td>
-      <td>Trade/Industry Association</td>
-      <td>Beijing</td>
-      <td>2017-08-15</td>
       <td>China</td>
     </tr>
     <tr>
@@ -6729,7 +6641,7 @@
       <td>Hong Kong</td>
       <td>Disaster Relief, Poverty Alleviation</td>
       <td>Yunnan</td>
-      <td>2017-04-01</td>
+      <td>2017-04-10</td>
       <td>Yunnan</td>
     </tr>
     <tr>
