--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -4699,6 +4699,23 @@
       <td>Bethune Medical Development Association of Canada</td>
       <td>加拿大白求恩医学发展协会</td>
       <td>Canada</td>
+      <td>Cooperation and Exchange in Areas Such as Medical Technology, Personnel Training, and Scientific Research</td>
+      <td>医疗技术、人才培养、科学研究等方面的合作与交流</td>
+      <td>Chongqing City</td>
+      <td>重庆市</td>
+      <td>Health, Science and Technology</td>
+      <td>2022-04-12</td>
+      <td>2023-04-12</td>
+      <td>Chongqing University Sanxia Affiliated Hospital</td>
+      <td>重庆大学附属三峡医院</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Bethune Medical Development Association of Canada</td>
+      <td>加拿大白求恩医学发展协会</td>
+      <td>Canada</td>
       <td>Huangshi City Central Hospital Academic Exchange</td>
       <td>加拿大白求恩医学发展协会-黄石市中心医院学术交流</td>
       <td>Hubei Province</td>
@@ -4742,23 +4759,6 @@
       <td>2019-04-22</td>
       <td>Zhaoqing City No. 1 People’s Hospital</td>
       <td>肇庆市第一人民医院</td>
-      <td>Hospital or Medical Center</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Bethune Medical Development Association of Canada</td>
-      <td>加拿大白求恩医学发展协会</td>
-      <td>Canada</td>
-      <td>Cooperation and Exchange in Areas Such as Medical Technology, Personnel Training, and Scientific Research</td>
-      <td>医疗技术、人才培养、科学研究等方面的合作与交流</td>
-      <td>Chongqing City</td>
-      <td>重庆市</td>
-      <td>Health, Science and Technology</td>
-      <td>2022-04-12</td>
-      <td>2023-04-12</td>
-      <td>Chongqing University Sanxia Affiliated Hospital</td>
-      <td>重庆大学附属三峡医院</td>
       <td>Hospital or Medical Center</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -5576,6 +5576,23 @@
       <td>Zhejiang Academy of Forestry</td>
       <td>浙江省林业科学研究院</td>
       <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Botanic Gardens Conservation International (BGCI)</td>
+      <td>国际植物园保护联盟</td>
+      <td>United Kingdom</td>
+      <td>Comprehensive Protection of the Endangered Plant Carpinus Putoensis</td>
+      <td>濒危植物普陀鹅耳枥综合保护研究</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Environment</td>
+      <td>2022-01-01</td>
+      <td>2022-12-31</td>
+      <td>Zhoushan City Forest Industry Scientific Research Institutee</td>
+      <td>舟山市林业科学研究院</td>
+      <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -8913,6 +8930,23 @@
     </tr>
     <tr>
       <td>Chan Cheung Mun Chung Charitable Fund Limited</td>
+      <td>陈张敏聪夫人慈善基金</td>
+      <td>Hong Kong</td>
+      <td>Anhui Province, Qianshan City, Wanjian Village’s “Rui Family Ancestral Home” Renovation Project</td>
+      <td>安徽省潜山市万涧村“芮家老屋”更新项目</td>
+      <td>Anhui Province</td>
+      <td>安徽省</td>
+      <td>Arts and Culture, Infrastructure</td>
+      <td>2022-05-25</td>
+      <td>2023-05-24</td>
+      <td>Qianshan City, Wanjian Village Services Development Center</td>
+      <td>潜山市万涧村涧行者乡村服务发展中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Qianshan City Women's Federation</td>
+      <td>潜山市妇女联合会</td>
+    </tr>
+    <tr>
+      <td>Chan Cheung Mun Chung Charitable Fund Limited</td>
       <td>陈张敏聪夫人慈善基金会有限公司</td>
       <td>Hong Kong</td>
       <td>Funding for Phase 2 of Building Earthquake-Reistant Buildings and Special Homes after the Sichuan Earthquake</td>
@@ -9097,23 +9131,6 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Chan Cheung Mun Chung Charitable Fund Limited</td>
-      <td>陈张敏聪夫人慈善基金</td>
-      <td>Hong Kong</td>
-      <td>Anhui Province, Qianshan City, Wanjian Village’s “Rui Family Ancestral Home” Renovation Project</td>
-      <td>安徽省潜山市万涧村“芮家老屋”更新项目</td>
-      <td>Anhui Province</td>
-      <td>安徽省</td>
-      <td>Arts and Culture, Infrastructure</td>
-      <td>2022-05-25</td>
-      <td>2023-05-24</td>
-      <td>Qianshan City, Wanjian Village Services Development Center</td>
-      <td>潜山市万涧村涧行者乡村服务发展中心</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Qianshan City Women's Federation</td>
-      <td>潜山市妇女联合会</td>
     </tr>
     <tr>
       <td>Chan Dang Social Services Foundation</td>
@@ -25218,6 +25235,23 @@
       <td>Green Action Charity Foundation</td>
       <td>力行植林慈善基金会</td>
       <td>Hong Kong</td>
+      <td>“Lianzhou Poverty Alleviation and Restoring Sight” Plan Supplementary Agreement</td>
+      <td>“连州市扶贫复明工程”方案补充协议</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Disabilities, Health, Poverty Alleviation</td>
+      <td>2022-03-15</td>
+      <td>2022-12-31</td>
+      <td>Lianzhou City People’s Hospital</td>
+      <td>连州市人民医院</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Green Action Charity Foundation</td>
+      <td>力行植林慈善基金会</td>
+      <td>Hong Kong</td>
       <td>Meixian District “Assisting with Schooling for the Disabled” and “Poverty Alleviation and Restoring Sight” Activities</td>
       <td>梅县区“扶残助学”和“扶贫复明”活动</td>
       <td>Guangdong Province (Meizhou City, Meixian District)</td>
@@ -25517,23 +25551,6 @@
       <td>Yangshan County Disabled Persons Federation</td>
       <td>阳山县残疾人联合会</td>
       <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Green Action Charity Foundation</td>
-      <td>力行植林慈善基金会</td>
-      <td>Hong Kong</td>
-      <td>“Lianzhou Poverty Alleviation and Restoring Sight” Plan Supplementary Agreement</td>
-      <td>“连州市扶贫复明工程”方案补充协议</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Disabilities, Health, Poverty Alleviation</td>
-      <td>2022-03-15</td>
-      <td>2022-12-31</td>
-      <td>Lianzhou City People’s Hospital</td>
-      <td>连州市人民医院</td>
-      <td>Hospital or Medical Center</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -31848,6 +31865,23 @@
       <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
       <td>电气与电子工程师协会</td>
       <td>United States</td>
+      <td>2022 International Academic Symposium on Networks, Computers, and Communications</td>
+      <td>2022年网络、计算机和通信国际学术研讨会</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Science and Technology</td>
+      <td>2022-07-19</td>
+      <td>2022-07-22</td>
+      <td>University of Electronic Science and Technology of China</td>
+      <td>电子科技大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
+      <td>电气与电子工程师协会</td>
+      <td>United States</td>
       <td>2021 International Conference on Broadband Multimedia Systems and Broadcasting</td>
       <td>2021年IEEE宽带多媒体系统及广播国际会议</td>
       <td>Sichuan Province</td>
@@ -32129,23 +32163,6 @@
       <td>2021-10-31</td>
       <td>Xiamen University School of Electronic Science and Technology</td>
       <td>厦门大学电子科学与技术学院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
-      <td>电气与电子工程师协会</td>
-      <td>United States</td>
-      <td>2022 International Academic Symposium on Networks, Computers, and Communications</td>
-      <td>2022年网络、计算机和通信国际学术研讨会</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Education, Science and Technology</td>
-      <td>2022-07-19</td>
-      <td>2022-07-22</td>
-      <td>University of Electronic Science and Technology of China</td>
-      <td>电子科技大学</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -37676,6 +37693,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Latin American Council of Social Sciences (CLACSO)</td>
+      <td>拉丁美洲社会科学理事会</td>
+      <td>Argentina</td>
+      <td>China-Latin America Forum: China-Latin America Relations in the Post-Pandemic Era</td>
+      <td>中拉论坛：后疫情时代的中拉关系</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>International Relations/Exchange</td>
+      <td>2022-06-09</td>
+      <td>2022-06-10</td>
+      <td>Institute of Latin American Studies, Chinese Academy of Social Sciences</td>
+      <td>中国社会科学院拉丁美洲研究所</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Law’s Charitable Foundation</td>
       <td>罗氏慈善基金</td>
       <td>Hong Kong</td>
@@ -40294,6 +40328,23 @@
       <td>Unknown</td>
     </tr>
     <tr>
+      <td>Macao Quality Brand International Certification League</td>
+      <td>澳门质量品牌国际认证联盟</td>
+      <td>Macau</td>
+      <td>Greater Bay Area Dialogue—Exploring a New Path for Digital Transformation</td>
+      <td>湾区对话—数字转型探新路</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>International Relations/Exchange, Science and Technology, Trade/Industry Association</td>
+      <td>2022-06-11</td>
+      <td>2022-06-11</td>
+      <td>Guangzhou City Sustainable Development Research Association</td>
+      <td>广州城市可持续发展研究会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>Macao Shun De Rong Gui Fellow Provincials Association</td>
       <td>澳门顺德容桂同乡会</td>
       <td>Macau</td>
@@ -42626,6 +42677,23 @@
       <td>MISEREOR Foundation</td>
       <td>德国米苏尔社会发展基金会</td>
       <td>Germany</td>
+      <td>“Mother Farm”——Youth Education and Impoverished Households Sustainable Development Project</td>
+      <td>“妈妈农场”——青少年教育及困境家庭可持续发展计划</td>
+      <td>Sichuan Province</td>
+      <td>四川省</td>
+      <td>Agriculture, Education, Environment, Poverty Alleviation, Rural Issues/Development, Youth</td>
+      <td>2022-06-01</td>
+      <td>2023-04-30</td>
+      <td>Beichuan Qiang Autonomous County “Big Fish” Youth Development Center</td>
+      <td>北川羌族自治县大鱼青少年公益发展中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Beichuan Qiang Autonomous County Bureau of Civil Affairs</td>
+      <td>(直接登记)</td>
+    </tr>
+    <tr>
+      <td>MISEREOR Foundation</td>
+      <td>德国米苏尔社会发展基金会</td>
+      <td>Germany</td>
       <td>Project to Join Hands with Autistic Heads of Household Nationwide</td>
       <td>全国孤独症家长携手计划</td>
       <td>Beijing City</td>
@@ -43964,23 +44032,6 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>MISEREOR Foundation</td>
-      <td>德国米苏尔社会发展基金会</td>
-      <td>Germany</td>
-      <td>“Mother Farm”——Youth Education and Impoverished Households Sustainable Development Project</td>
-      <td>“妈妈农场”——青少年教育及困境家庭可持续发展计划</td>
-      <td>Sichuan Province</td>
-      <td>四川省</td>
-      <td>Agriculture, Education, Environment, Poverty Alleviation, Rural Issues/Development, Youth</td>
-      <td>2022-06-01</td>
-      <td>2023-04-30</td>
-      <td>Beichuan Qiang Autonomous County “Big Fish” Youth Development Center</td>
-      <td>北川羌族自治县大鱼青少年公益发展中心</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Beichuan Qiang Autonomous County Bureau of Civil Affairs</td>
-      <td>(直接登记)</td>
     </tr>
     <tr>
       <td>Mizutani Foundation for Glycoscience</td>
@@ -55706,6 +55757,23 @@
       <td>Education, Poverty Alleviation</td>
       <td>2021-05-22</td>
       <td>2022-05-21</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Sun Hung Kai Properties—Kwoks’ Foundation Limited</td>
+      <td>新鸿基地产郭氏基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Zhejiang University Student Financial Aid</td>
+      <td>新鸿基地产郭氏基金浙江大学助学金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2022-06-22</td>
+      <td>2023-06-21</td>
       <td>Zhejiang University Education Foundation</td>
       <td>浙江大学教育基金会</td>
       <td>Non-Profit or Foundation</td>
@@ -70231,6 +70299,40 @@
       <td>雅安市教育局</td>
     </tr>
     <tr>
+      <td>Yellow Earth Foundation</td>
+      <td>黄土地基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Financial Aid for Min County No. 1 High School for Outstanding Graduating Seniors in 2022</td>
+      <td>香港黄土地基金资助岷县一中2022年高三毕业优秀学</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2022-07-01</td>
+      <td>2022-11-30</td>
+      <td>Gansu Province, Min Count No. 1 Middle School</td>
+      <td>甘肃省岷县第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yellow Earth Foundation</td>
+      <td>黄土地基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Online communications with Min County No. 1 High School Students Receiving Yellow Earth Foundation Financial Aid</td>
+      <td>黄土地基金负责人与岷县一中受助学生进行线上交流</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, International Relations/Exchange, Poverty Alleviation, Youth</td>
+      <td>2022-06-15</td>
+      <td>2022-08-31</td>
+      <td>Gansu Province, Min Count No. 1 Middle School</td>
+      <td>甘肃省岷县第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Yellow River Forest Greening Network</td>
       <td>黄河森林绿化网络</td>
       <td>Japan</td>
@@ -72087,23 +72189,6 @@
       <td>Zhu Jia Charity Association</td>
       <td>筑家慈善会</td>
       <td>Macau</td>
-      <td>Hui’ai Zhu Jia · Nanhai</td>
-      <td>汇爱筑家·南海</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Unknown</td>
-      <td>2021-09-10</td>
-      <td>2022-09-01</td>
-      <td>Foshan City, Nanhai District Overseas Friendship Association</td>
-      <td>佛山市南海区海外联谊会</td>
-      <td>Party or Government Entity</td>
-      <td>Foshan City, Nanhai District United Front Work Department</td>
-      <td>佛山市南海区委统战部</td>
-    </tr>
-    <tr>
-      <td>Zhu Jia Charity Association</td>
-      <td>筑家慈善会</td>
-      <td>Macau</td>
       <td>"Hui’ai Zhu Jia · Common Aspirations, Realizing Dreams"</td>
       <td>“汇爱筑家·同心圆梦”</td>
       <td>Guangdong Province</td>
@@ -72116,6 +72201,23 @@
       <td>Unknown</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Zhu Jia Charity Association</td>
+      <td>筑家慈善会</td>
+      <td>Macau</td>
+      <td>Hui’ai Zhu Jia · Nanhai</td>
+      <td>汇爱筑家·南海</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Unknown</td>
+      <td>2021-09-10</td>
+      <td>2022-09-01</td>
+      <td>Foshan City, Nanhai District Overseas Friendship Association</td>
+      <td>佛山市南海区海外联谊会</td>
+      <td>Party or Government Entity</td>
+      <td>Foshan City, Nanhai District United Front Work Department</td>
+      <td>佛山市南海区委统战部</td>
     </tr>
     <tr>
       <td>Zhuang Ma Er Tian Foundation</td>
