--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -4322,6 +4322,23 @@
       <td>宜昌市民政局</td>
     </tr>
     <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>英国贝利马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>Increasing Outreach to Target Populations to Improve HIV Testing Programs</td>
+      <td>英国贝利马丁加大目标人群宣传提高艾滋病检测项目</td>
+      <td>Jiangxi Province</td>
+      <td>江西省</td>
+      <td>Health</td>
+      <td>2022-06-24</td>
+      <td>2023-02-28</td>
+      <td>Nanchang Rainbow Health Information Public Service Center</td>
+      <td>南昌彩虹健康咨询公益服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Nanchang Bureau of Civil and Religious Affairs</td>
+      <td>南昌市民政局</td>
+    </tr>
+    <tr>
       <td>Bay Area Hong Kong Center</td>
       <td>大湾区香港中心有限公司</td>
       <td>Hong Kong</td>
@@ -5564,23 +5581,6 @@
     </tr>
     <tr>
       <td>Botanic Gardens Conservation International (BGCI)</td>
-      <td>国际植物园保护联盟（BGCI）</td>
-      <td>United Kingdom</td>
-      <td>Comprehensive Protection of the Endangered Woody Plant Silver Hazel</td>
-      <td>濒危木本植物银缕梅的综合保护</td>
-      <td>Zhejiang Province</td>
-      <td>浙江省</td>
-      <td>Environment</td>
-      <td>2021-04-13</td>
-      <td>2021-12-31</td>
-      <td>Zhejiang Academy of Forestry</td>
-      <td>浙江省林业科学研究院</td>
-      <td>Think Tank or Research Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Botanic Gardens Conservation International (BGCI)</td>
       <td>国际植物园保护联盟</td>
       <td>United Kingdom</td>
       <td>Comprehensive Protection of the Endangered Plant Carpinus Putoensis</td>
@@ -5593,6 +5593,23 @@
       <td>Zhoushan City Forest Industry Scientific Research Institutee</td>
       <td>舟山市林业科学研究院</td>
       <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Botanic Gardens Conservation International (BGCI)</td>
+      <td>国际植物园保护联盟（BGCI）</td>
+      <td>United Kingdom</td>
+      <td>Comprehensive Protection of the Endangered Woody Plant Silver Hazel</td>
+      <td>濒危木本植物银缕梅的综合保护</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Environment</td>
+      <td>2021-04-13</td>
+      <td>2021-12-31</td>
+      <td>Zhejiang Academy of Forestry</td>
+      <td>浙江省林业科学研究院</td>
+      <td>Think Tank or Research Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -10678,6 +10695,23 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Chiang Chen Industrial Charity Foundation</td>
+      <td>蒋震工业慈善基金（香港）有限公司</td>
+      <td>Hong Kong</td>
+      <td>Chiang Chen Heze Scholarship</td>
+      <td>蒋震菏泽奖学金</td>
+      <td>Shandong Province</td>
+      <td>山东省</td>
+      <td>Education</td>
+      <td>2022-06-01</td>
+      <td>2023-05-31</td>
+      <td>Shandong University Education Foundation</td>
+      <td>山东大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shandong Department of Education</td>
+      <td>山东省教育厅</td>
     </tr>
     <tr>
       <td>Chiang Cheng Industrial Charity Foundation</td>
@@ -30043,6 +30077,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Hong Kong Skywalker Charitable Fund Limited</td>
+      <td>香港天行者慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>2022 Qingyuan Mountainous Area Compassionate Activities</td>
+      <td>2022年天行者清远山区爱心活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Rural Issues/Development</td>
+      <td>2022-06-28</td>
+      <td>2023-01-31</td>
+      <td>Qingyuan Overseas Friendship Association</td>
+      <td>清远海外联谊会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>Hong Kong South Lions Club</td>
       <td>香港港南狮子会</td>
       <td>Hong Kong</td>
@@ -40314,23 +40365,6 @@
       <td>Macao Quality Brand International Certification League</td>
       <td>澳门质量品牌国际认证联盟</td>
       <td>Macau</td>
-      <td>Macao Quality Brand International Certification League Founding Conference</td>
-      <td>澳门质量品牌国际认证联盟成立大会</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Trade/Industry Association</td>
-      <td>2021-03-16</td>
-      <td>2021-03-31</td>
-      <td>Zhuhai Enterprises Association for Foreign Economic Cooperation</td>
-      <td>珠海市对外经济合作企业协会</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Macao Quality Brand International Certification League</td>
-      <td>澳门质量品牌国际认证联盟</td>
-      <td>Macau</td>
       <td>Greater Bay Area Dialogue—Exploring a New Path for Digital Transformation</td>
       <td>湾区对话—数字转型探新路</td>
       <td>Guangdong Province</td>
@@ -40340,6 +40374,23 @@
       <td>2022-06-11</td>
       <td>Guangzhou City Sustainable Development Research Association</td>
       <td>广州城市可持续发展研究会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Macao Quality Brand International Certification League</td>
+      <td>澳门质量品牌国际认证联盟</td>
+      <td>Macau</td>
+      <td>Macao Quality Brand International Certification League Founding Conference</td>
+      <td>澳门质量品牌国际认证联盟成立大会</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Trade/Industry Association</td>
+      <td>2021-03-16</td>
+      <td>2021-03-31</td>
+      <td>Zhuhai Enterprises Association for Foreign Economic Cooperation</td>
+      <td>珠海市对外经济合作企业协会</td>
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
@@ -56750,6 +56801,23 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Tang Shi Education Foundation</td>
+      <td>美国汤氏教育基金会</td>
+      <td>United States</td>
+      <td>Zhejiang University Education Foundation Wenqin Early Childhood Education Fund</td>
+      <td>浙江大学教育基金会文琴幼教发展基金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Youth</td>
+      <td>2022-06-15</td>
+      <td>2023-06-14</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
       <td>Tanzhao Charitable Foundation</td>
       <td>谭兆慈善基金</td>
       <td>Unknown</td>
@@ -66491,7 +66559,7 @@
       <td>Unknown</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66508,7 +66576,7 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66525,7 +66593,7 @@
       <td>中国共产主义青年团甘肃省委员会</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66542,7 +66610,7 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66559,7 +66627,7 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66576,7 +66644,7 @@
       <td>Unknown</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66593,7 +66661,7 @@
       <td>Unknown</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66610,7 +66678,7 @@
       <td>Unknown</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66627,7 +66695,7 @@
       <td>Unknown</td>
     </tr>
     <tr>
-      <td>Virtus Foundation</td>
+      <td>Virtus Foundation Limited</td>
       <td>明德慈善教育基金有限公司</td>
       <td>Hong Kong</td>
       <td>Creating Dreams Student Financial Aid Project</td>
@@ -66642,6 +66710,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Virtus Foundation Limited</td>
+      <td>香港明德慈善教育基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Creating Dreams Student Financial Aid Project</td>
+      <td>香港明德慈善教育基金有限公司“缔造梦想助学计划”</td>
+      <td>Guangxi Zhuang Autonomous Region</td>
+      <td>广西壮族自治区</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2022-07-21</td>
+      <td>2022-07-24</td>
+      <td>Guangxi Zhuang Autonomous Region, Hechi City Bureau of Education</td>
+      <td>广西河池市教育局</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Virya Foundation Limited</td>
@@ -70078,6 +70163,57 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Fenghuang County)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（凤凰县）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Huayuan County)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（花垣县）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Jishou City)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（吉首市）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Yan Fung Tung Buddhist and Taoist Society Limited</td>
       <td>仁枫洞佛道社有限公司</td>
       <td>Hong Kong</td>
@@ -70234,6 +70370,40 @@
       <td>Yellow Earth Foundation</td>
       <td>黄土地基金有限公司</td>
       <td>Hong Kong</td>
+      <td>Online communications with Min County No. 1 High School Students Receiving Yellow Earth Foundation Financial Aid</td>
+      <td>黄土地基金负责人与岷县一中受助学生进行线上交流</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, International Relations/Exchange, Poverty Alleviation, Youth</td>
+      <td>2022-06-15</td>
+      <td>2022-08-31</td>
+      <td>Gansu Province, Min Count No. 1 Middle School</td>
+      <td>甘肃省岷县第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yellow Earth Foundation</td>
+      <td>黄土地基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Financial Aid for Min County No. 1 High School for Outstanding Graduating Seniors in 2022</td>
+      <td>香港黄土地基金资助岷县一中2022年高三毕业优秀学</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2022-07-01</td>
+      <td>2022-11-30</td>
+      <td>Gansu Province, Min Count No. 1 Middle School</td>
+      <td>甘肃省岷县第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yellow Earth Foundation</td>
+      <td>黄土地基金有限公司</td>
+      <td>Hong Kong</td>
       <td>Sponsoring Impoverished Students in Ningxia Hui Autonomous Region, Guyuan City No. 5 Middle School</td>
       <td>香港黄土地基金资助宁夏固原五中高中贫困学生</td>
       <td>Ningxia Hui Autonomous Region</td>
@@ -70297,40 +70467,6 @@
       <td>Non-Profit or Foundation</td>
       <td>Ya'an City Department of Education</td>
       <td>雅安市教育局</td>
-    </tr>
-    <tr>
-      <td>Yellow Earth Foundation</td>
-      <td>黄土地基金有限公司</td>
-      <td>Hong Kong</td>
-      <td>Financial Aid for Min County No. 1 High School for Outstanding Graduating Seniors in 2022</td>
-      <td>香港黄土地基金资助岷县一中2022年高三毕业优秀学</td>
-      <td>Gansu Province</td>
-      <td>甘肃省</td>
-      <td>Education, Poverty Alleviation, Youth</td>
-      <td>2022-07-01</td>
-      <td>2022-11-30</td>
-      <td>Gansu Province, Min Count No. 1 Middle School</td>
-      <td>甘肃省岷县第一中学</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Yellow Earth Foundation</td>
-      <td>黄土地基金有限公司</td>
-      <td>Hong Kong</td>
-      <td>Online communications with Min County No. 1 High School Students Receiving Yellow Earth Foundation Financial Aid</td>
-      <td>黄土地基金负责人与岷县一中受助学生进行线上交流</td>
-      <td>Gansu Province</td>
-      <td>甘肃省</td>
-      <td>Education, International Relations/Exchange, Poverty Alleviation, Youth</td>
-      <td>2022-06-15</td>
-      <td>2022-08-31</td>
-      <td>Gansu Province, Min Count No. 1 Middle School</td>
-      <td>甘肃省岷县第一中学</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Yellow River Forest Greening Network</td>
