--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4797,6 +4797,17 @@
       <td>Anhui, Chongqing, Gansu, Hubei, Hunan, Jiangsu, Qinghai</td>
     </tr>
     <tr>
+      <td>Pacific Rim Institute for Development &amp; Education (PRIDE)</td>
+      <td>太平洋地区发展与教育组织</td>
+      <td>Shanghai Hongqiao International Central Business District Management Committee</td>
+      <td>上海虹桥国际中央商务区管理委员会</td>
+      <td>United States</td>
+      <td>Arts and Culture, Economic Development, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-06-16</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Panama Chinese Chamber of Commerce</td>
       <td>巴拿马华商总会</td>
       <td>Council for the Promotion of International Trade, Guangdong</td>
@@ -4971,6 +4982,17 @@
       <td>Shanghai</td>
       <td>2017-01-17</td>
       <td>Anhui, Fujian, Guangdong, Guangxi, Guizhou, Heilongjiang, Inner Mongolia, Jiangsu, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tibet, Xinjiang, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>ProVeg International</td>
+      <td>普罗维植国际植物饮食协会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>United States</td>
+      <td>Environment, Health, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-06-16</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Pyrexa Global</td>
